--- a/Test 1.html
+++ b/Test 1.html
@@ -21,4 +21,31 @@
   </ul>
 
 <h2>Bonus</h2>
-<img src="https://i.ibb.co/dbrk6Bf/html5-table.png" alt="html5-table" border="0">
+
+<table>
+    <tr>
+      <th>Title</th>
+      <th>Price</th>
+      <th>Available</th>
+    </tr>
+    <tr>
+      <td>CSS Demystified</td>
+      <td>$29</td>
+      <td>10</td>
+    </tr>
+    <tr>
+      <td>Mastering JavaScript</td>
+      <td>$35</td>
+      <td>10</td>
+    </tr>
+    <tr>
+        <td>HTML5: AN Introduction</td>
+        <td>$15</td>
+        <td>6</td>
+    </tr>
+    <tr>
+        <td>Total</td>
+        <td>  </td>
+        <td>32</td>
+    </tr>
+  </table>
