--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -25,7 +25,7 @@
         <button class="child3"><P>CONTACT US</P></button>
     
   
-        <button id="loginButton">SIGN IN</button>
+        <button id="loginButton" class="child12">SIGN IN</button>
   <div id="loginPopup1" class="popup1">
     <div class="popup1-content">
       <span class="close1" id="close1Button">&times;</span>
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-  <button id="signupButton">SIGN UP</button>
+  <button id="signupButton" class="child13">SIGN UP</button>
   <div id="signupPopup2" class="popup2">
     <div class="popup2-content">
       <span class="close2" id="close2Button">&times;</span>
